kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: page-downloader
  namespace: homework
  labels:
    app: homework-deploment  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-1      
  template:
    metadata:
      labels:
        app: homework-1
    spec:
      volumes:
        - name: html
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
          readinessProbe:
           httpGet:
             path: /index.html
             port: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
